# ember-rpg

./: .gitignore  CODEX_REVIEW_PROMPT.md  GDD.md  PRD_api_layer.md  PRD_consequence_system.md  PRD_dm_agent.md  PRD_game_flow_architecture.md  PRD_item_system.md  PRD_magic_system.md  PRD_map_generator.md  PRD_npc_memory.md  PRD_world_state.md  README.md  RESEARCH.md  ROADMAP.md  ember-backend.service
frp-backend/: .coverage  .gitignore  README.md  chaos_report.json  main.py  pyproject.toml  requirements.txt
frp-backend/data/: campaign_runtime.json  campaign_templates.json  character_creation.json  classes.json  consequence_rules.json  history_tables.json  items.json  locations.json  loot_tables.json  monsters.json  name_banks.json  npc_templates.json  progression.json  recipes.json  runtime_config.json  schedules.json  social_rules.json  spells.json  worldgen.json
frp-backend/docs/: PRD_save_load.md  PRD_websocket.md
frp-backend/ember_rpg.egg-info/: PKG-INFO  SOURCES.txt
frp-backend/engine/: __init__.py  data_loader.py
frp-backend/saves/: p1_ab9276e7-eb3c-45ad-86de-a05d5b273be8.json  test_player_list_saves_09649282-51f7-4e31-b314-35b017196f0e.json  test_player_list_saves_5382800a-17b3-4835-9a39-712fb2246537.json  test_player_list_saves_ac96afc4-726f-4f60-a763-d6f77e98e5cb.json  test_player_save_load_0610b22b-2613-46e2-81da-77e94d5bcf47.json  test_player_save_load_5bf5db2f-9da4-4cb8-b85b-09f5a1d573bb.json  test_player_save_load_f217889a-eea7-458a-83b6-a8a4d9d05019.json
frp-backend/tests/: coverage.json  test_action_parser.py  test_action_points.py  test_api.py  (+99 more)
(+365 files in other folders)
